--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -35,9 +35,17 @@
         <div class="forms-container">
             <div class="signin-signup">
                 <!--Formulário de Login-->
-                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login_user()"
-                    action="javascript:void(0)">
+                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login_user()" action="javascript:void(0)">
                     <h2 class="title">Bem-vindo</h2>
+
+                    <div class="input-radio">
+
+                        <input type="radio" name="radio_empresa" id="radio_empresa" checked>
+                        <label for="radio_empres">Empresa</label>
+                        <input type="radio" name="radio_empresa" id="radio_responsavel">
+                        <label for="radio_responsavel">Responsável</label>
+                    </div>
+                    <br>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
                         <input id="userLogin" type="text" name="login_user" placeholder="Usuário" required>
@@ -67,8 +75,7 @@
                 </form>
 
                 <!--Formulário de Cadastro-->
-                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()"
-                    action="javascript:void(0)">
+                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()" action="javascript:void(0)">
 
                     <div class="step-row">
                         <div id="progress" class="progress"></div>
@@ -107,13 +114,11 @@
                             <!--cep,logradouro,uf,cidade,numero,complemento,bairro-->
                             <div class="input-field">
                                 <i class="fas fa-globe-americas"></i>
-                                <input id="cepEmpresa" type="number" name="cepEmpresa" placeholder="CEP" min="0"
-                                >
+                                <input id="cepEmpresa" type="number" name="cepEmpresa" placeholder="CEP" min="0">
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-road"></i>
-                                <input id="logradouroEmpresa" type="text" name="logradouroEmpresa"
-                                    placeholder="Logradouro">
+                                <input id="logradouroEmpresa" type="text" name="logradouroEmpresa" placeholder="Logradouro">
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-globe"></i>
@@ -151,25 +156,21 @@
 
                             <div class="input-field">
                                 <i class="fas fa-city"></i>
-                                <input id="cidadeEmpresa" type="text" name="cidadeEmpresa" placeholder="Cidade"
-                                >
+                                <input id="cidadeEmpresa" type="text" name="cidadeEmpresa" placeholder="Cidade">
                             </div>
 
                             <div class="input-field">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <input id="bairroEmpresa" type="text" name="bairroEmpresa" placeholder="Bairro"
-                                >
+                                <input id="bairroEmpresa" type="text" name="bairroEmpresa" placeholder="Bairro">
                             </div>
 
                             <div class="input-field">
                                 <i class="fas fa-home"></i>
-                                <input id="numeroEmpresa" type="text" name="numeroEmpresa" placeholder="Número"
-                                >
+                                <input id="numeroEmpresa" type="text" name="numeroEmpresa" placeholder="Número">
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-plus"></i>
-                                <input id="complementoEmpresa" type="text" name="complementoEmpresa"
-                                    placeholder="Complemento">
+                                <input id="complementoEmpresa" type="text" name="complementoEmpresa" placeholder="Complemento">
                             </div>
 
 
@@ -183,13 +184,11 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senhaEmpresa"
-                                    type="password" placeholder="Senha">
+                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senhaEmpresa" type="password" placeholder="Senha">
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password"
-                                    placeholder="Confirme sua senha">
+                                <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password" placeholder="Confirme sua senha">
                             </div>
 
 
