--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -35,13 +35,14 @@
         <div class="forms-container">
             <div class="signin-signup">
                 <!--Formulário de Login-->
-                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login_user()" action="javascript:void(0)">
+                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login_user()"
+                    action="javascript:void(0)">
                     <h2 class="title">Bem-vindo</h2>
 
                     <div class="input-radio">
 
                         <input type="radio" name="radio_empresa" id="radio_empresa" checked>
-                        <label for="radio_empres">Empresa</label>
+                        <label for="radio_empresa">Empresa</label>
                         <input type="radio" name="radio_empresa" id="radio_responsavel">
                         <label for="radio_responsavel">Responsável</label>
                     </div>
@@ -75,7 +76,8 @@
                 </form>
 
                 <!--Formulário de Cadastro-->
-                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()" action="javascript:void(0)">
+                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()"
+                    action="javascript:void(0)">
 
                     <div class="step-row">
                         <div id="progress" class="progress"></div>
@@ -118,7 +120,8 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-road"></i>
-                                <input id="logradouroEmpresa" type="text" name="logradouroEmpresa" placeholder="Logradouro">
+                                <input id="logradouroEmpresa" type="text" name="logradouroEmpresa"
+                                    placeholder="Logradouro">
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-globe"></i>
@@ -170,7 +173,8 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-plus"></i>
-                                <input id="complementoEmpresa" type="text" name="complementoEmpresa" placeholder="Complemento">
+                                <input id="complementoEmpresa" type="text" name="complementoEmpresa"
+                                    placeholder="Complemento">
                             </div>
 
 
@@ -184,11 +188,13 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senhaEmpresa" type="password" placeholder="Senha">
+                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senhaEmpresa"
+                                    type="password" placeholder="Senha">
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password" placeholder="Confirme sua senha">
+                                <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password"
+                                    placeholder="Confirme sua senha">
                             </div>
 
 
