--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -26,7 +26,7 @@
         <div id="loginAlert" class="alert">
             <span></span>
             <i class="fas fa-times-circle"></i>
-            <p>Usuário ou senha inválidos!</p>
+            <p>Erro de cadastro</p>
             <div onclick="closeAlert('#loginAlert')" class="close-btn">
                 <i class="fas fa-times"></i>
             </div>
@@ -103,10 +103,6 @@
                             <div class="input-field">
                                 <i class="fas fa-envelope"></i>
                                 <input id="emailEmpresa" type="text" name="emailEmpresa" placeholder="E-mail">
-                            </div>
-                            <div id="error-message-email" class="error-message">
-                                <i class="fas fa-times-circle"></i>
-                                <p>E-mail inválido</p>
                             </div>
                         </div>
 
