--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-    <div class="container">
+    <div id="container" class="container">
 
-        <div id="cadastroAlert" class="alert">
+        <!-- <div id="cadastroAlert" class="alert">
             <span></span>
             <i class="far fa-check-circle"></i>
             <p>Cadastro realizado com sucesso!</p>
             <div onclick="closeAlert('#cadastroAlert')" class="close-btn">
                 <i class="fas fa-times"></i>
             </div>
-        </div>
+        </div> -->
 
         <div id="loginAlert" class="alert">
             <span></span>
@@ -220,8 +220,8 @@
                     <div class="sign-btns">
                         <input type="button" onclick="previous()" value="Anterior" class="btn solid pink">
 
-                        <input id="signButton" type="button" onclick="next()" value="Próximo" class="btn solid pink">
-
+                        <input id="signButton" type="button" onclick="generateAlert(document.getElementById('container'),'warning','Deu ruim!')" value="Próximo" class="btn solid pink">
+                        <!-- next() -->
                     </div>
 
 
@@ -271,6 +271,7 @@
 
     <script src="../src/js/login.js"></script>
     <script src="../src/js/sign.js"></script>
+    <script src="../src/js/alerts.js"></script>
 </body>
 
 </html>
