--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
@@ -54,43 +54,76 @@
                 <h1>AMBIENTES</h1>
                 <hr class="pink-stroke" />
             </div>
-            <section class="box-container">
-                <div class="boxes">
-                    <a href="./sala.html">
-                        <div class="boxes-item">
-                            <h3>Sala 2C</h3>
-                            <div class="box-text">
-                                <p>Sala localizada no 2° andar do prédio</p>
-                                <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
-                                    <i class='far fa-lightbulb luminosidade'></i>
-                                </h4>
-                                <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
-                            </div>
-                        </div>
-                    </a>
+            <section class="rooms-container">
+                
                     <div class="boxes-item">
-                        <h3>Sala 3A</h3>
+                        <h3>Sala 2C</h3>
                         <div class="box-text">
-                            <p>Sala localizada no 3° andar do prédio</p>
+                            <p>Sala localizada no 2° andar do prédio</p>
                             <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
-                                <i class='fas fa-tint umidade'></i>
                                 <i class='far fa-lightbulb luminosidade'></i>
                             </h4>
                             <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
                         </div>
                     </div>
-                    <div class="boxes-item">
-                        <h3>Sala 8B</h3>
-                        <div class="box-text">
-                            <p>Sala localizada no 8° andar do prédio</p>
-                            <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
-                                <i class='fas fa-tint umidade'></i>
-                                <h4>Status: <i class='fas fa-circle critico'></i> </h4>
-                        </div>
+
+               <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
                     </div>
-                </div>
+                </div> 
+               <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div> 
+               <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div> 
+               <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div> 
+               <div class="boxes-item">
+                    <h3>Sala 3A</h3>
+                    <div class="box-text">
+                        <p>Sala localizada no 3° andar do prédio</p>
+                        <h4>Sensores: <i class='fas fa-thermometer-empty temperatura'></i>
+                            <i class='fas fa-tint umidade'></i>
+                            <i class='far fa-lightbulb luminosidade'></i>
+                        </h4>
+                        <h4>Status: <i class='fas fa-circle ideal'></i> </h4>
+                    </div>
+                </div> 
             </section>
-            <section class="box-container">
+            <!-- <section class="box-container">
                 <div class="boxes">
                     <div class="boxes-item">
                         <h3>Sala 1C</h3>
@@ -123,7 +156,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </div>
     </div>
     <script src='../src/js/dashboard.js'></script>
