--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -22,7 +22,7 @@
                 <i class="fas fa-times"></i>
             </div>
         </div> -->
-<!-- 
+        <!-- 
         <div id="loginAlert" class="alert">
             <span></span>
             <i class="fas fa-times-circle"></i>
@@ -35,8 +35,7 @@
         <div class="forms-container">
             <div class="signin-signup">
                 <!--Formulário de Login-->
-                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login()"
-                    action="javascript:void(0)">
+                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login()" action="javascript:void(0)">
                     <h2 class="title">Bem-vindo</h2>
                     <!-- RADION BUTTONS -->
                     <div class="input-radio">
@@ -75,8 +74,7 @@
                 </form>
 
                 <!--Formulário de Cadastro-->
-                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()"
-                    action="javascript:void(0)">
+                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()" action="javascript:void(0)">
 
                     <div class="step-row">
                         <div id="progress" class="progress"></div>
@@ -115,8 +113,7 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-road"></i>
-                                <input id="logradouroEmpresa" type="text" name="logradouroEmpresa"
-                                    placeholder="Logradouro">
+                                <input id="logradouroEmpresa" type="text" name="logradouroEmpresa" placeholder="Logradouro">
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-globe"></i>
@@ -168,8 +165,7 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-plus"></i>
-                                <input id="complementoEmpresa" type="text" name="complementoEmpresa"
-                                    placeholder="Complemento">
+                                <input id="complementoEmpresa" type="text" name="complementoEmpresa" placeholder="Complemento">
                             </div>
 
 
@@ -183,13 +179,11 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senhaEmpresa"
-                                    type="password" placeholder="Senha">
+                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senhaEmpresa" type="password" placeholder="Senha">
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password"
-                                    placeholder="Confirme sua senha">
+                                <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password" placeholder="Confirme sua senha">
                             </div>
 
 
